Added MeetUp Talk

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <ul>
             <li><strong>Game Memory Manipulation:</strong> Reverse-engineering of CS2, implementing a helper tool for memory analysis and manipulation using C++, x64dbg, and Cheat Engine.</li>
             <li><strong>RoboRally:</strong> Transformed a board game into an online multiplayer game using Java and JavaFX.</li>
+            <li><strong>MeetUp Talk at Google Developer Group:</strong> Android Paging with GraphQL (<a href="https://gdg.community.dev/events/details/google-gdg-munich-android-presents-september-meetup-jetpack-and-more/">Link</a>, <a href="https://de.slideshare.net/secret/d7X7QtfRTnu1Of">Slides</a>)</li>
             <!-- <li><strong>Open Source Contributions:</strong> Actively contributing to projects on GitHub under <a href="#">leonidaas</a>.</li> -->
         </ul>
     </section>
