--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Leon Fuessner</h1>
         <div class="contact-info">
-            Brisbane, Australia | +61 494369062 | leon.fuessner@hotmail.de | 
+            Brisbane, Australia | +61 494369062 | <a href="mailto:leonfuessner@hotmail.de">leon.fuessner@hotmail.de</a> | 
             <a href="https://www.linkedin.com/in/leon-fuessner-bab212170">LinkedIn</a> | 
             <a href="https://github.com/leonidaas">GitHub</a>
         </div>
