--- a/index.html
+++ b/index.html
@@ -13,32 +13,31 @@
     <header>
         <h1>Leon Fuessner</h1>
         <div class="contact-info">
-            Brisbane, Australia | +61 494369062 | <a href="mailto:leonfuessner@hotmail.de">leon.fuessner@hotmail.de</a> | 
+            Brisbane, Australia | +61 413 463 393 | <a href="mailto:leonfuessner@hotmail.de">leon.fuessner@hotmail.de</a> | 
             <a href="https://www.linkedin.com/in/leon-fuessner-bab212170">LinkedIn</a> | 
             <a href="https://github.com/leonidaas">GitHub</a>
         </div>
-        <p>Android Developer | Open to Sponsorship</p>
+        <p>Software Engineer | Open to Sponsorship</p>
     </header>
 
     <section>
         <h2>Summary</h2>
-        <p>Experienced Android Developer with 4+ years of professional experience in designing, developing, and deploying scalable mobile applications. Strong expertise in Kotlin, Jetpack Compose, MVVM, Clean Architecture, and Test-Driven Development. Currently based in Brisbane and open to new opportunities with visa sponsorship.</p>
+        <p>I’m a software engineer passionate about C++, Simulations, and automated driving technologies, with 4+ years of experience that started in Android development. I love working with clean, scalable architectures, Test-Driven Development, and modern software design - and I’m especially excited about contributing to open-source projects. Currently based in Brisbane and open to new opportunities with visa sponsorship.</p>
     </section>
 
-    <section>
-        <h2>Technical Skills</h2>
-        <div class="skills-grid">
-            <div><strong>Languages & Frameworks:</strong> Kotlin, Java, Jetpack Compose, XML, Swift, SwiftUI, C++</div>
-            <div><strong>Architecture & Patterns:</strong> MVVM, MVI, Clean Architecture, Dependency Injection (Hilt, Koin)</div>
-            <div><strong>User Interface:</strong> Material Design, Human Design Guidelines</div>
-            <div><strong>Testing:</strong> JUnit, Espresso, Mockito</div>
-            <div><strong>Development Tools:</strong> Android Studio, Firebase, Git, CI/CD (GitHub Actions, Bitrise)</div>
-            <div><strong>APIs & Databases:</strong> REST, GraphQL, Room, SQLite</div>
-            <div><strong>Additional Technologies:</strong> VisionOS, Unreal Engine, SQL, NodeJS</div>
-            <div><strong>Agile & DevOps:</strong> Scrum, Jira, Docker, AWS, Google Cloud</div>
-        </div>
-    </section>
-
+   <section>
+  <h2>Technical Skills</h2>
+  <div class="skills-grid">
+    <div><strong>Languages & Frameworks:</strong> C++, C#, Kotlin, Java, Swift, Node.js</div>
+    <div><strong>Architecture & Patterns:</strong> MVVM, MVI, Clean Architecture, Dependency Injection (Hilt, Koin)</div>
+    <div><strong>User Interface:</strong> Material Design, Human Interface Guidelines</div>
+    <div><strong>Testing:</strong> Test-Driven Development (TDD), JUnit, Espresso, Mockito</div>
+    <div><strong>Development Tools:</strong> Android Studio, Git, Firebase, CI/CD (GitHub Actions, Bitrise)</div>
+    <div><strong>Simulation & Robotics:</strong> Autoware, AWSIM, ROS2, Unity3D, Unreal Engine, VisionOS</div>
+    <div><strong>APIs & Databases:</strong> REST, GraphQL, Room, SQLite, SQL</div>
+    <div><strong>Agile & DevOps:</strong> Scrum, Jira, Docker, AWS, Google Cloud, Linux</div>
+  </div>
+</section>
     <section>
         <h2>Professional Experience</h2>
         <div class="job">
@@ -46,6 +45,7 @@
             <p class="job-period">Feb 2025 – Present | Brisbane, Australia</p>
             <ul>
                 <li>Conducting research on VR/AR solutions in road safety to prevent car accidents.</li>
+                <li>Implementing a Digital Twin of a Real World Terrain using Autoware and AWSIM</li>
             </ul>
         </div>
         <div class="job">
